--- a/modules/test/testng/src/main/java/log4j.properties
+++ b/modules/test/testng/src/main/java/log4j.properties
@@ -2,11 +2,13 @@ log4j.rootLogger=INFO, out
 log4j.logger.jgroups=WARN
 
 #log4j.logger.discovery=TRACE
-#log4j.logger.cluster=TRACE
+#log4j.logger.cluster.service=TRACE
+#log4j.logger.cluster.action.shard=DEBUG
 #log4j.logger.indices.cluster=DEBUG
 #log4j.logger.index=TRACE
 #log4j.logger.index.engine=DEBUG
-#log4j.logger.index.shard.recovery=TRACE
+#log4j.logger.index.shard.service=DEBUG
+#log4j.logger.index.shard.recovery=DEBUG
 #log4j.logger.index.cache=DEBUG
 #log4j.logger.http=TRACE
 #log4j.logger.monitor.memory=TRACE
