--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 import java.text.SimpleDateFormat
 
-defaultTasks "clean", "devRelease"
+defaultTasks "clean", "release"
 
 usePlugin BasePlugin
 
@@ -11,20 +11,13 @@ SimpleDateFormat sdf = new SimpleDateFormat("yyyy-MM-dd'T'HH:mm:ss");
 sdf.setTimeZone(TimeZone.getTimeZone("UTC"));
 buildTimeStr = sdf.format(buildTime)
 
-versionNumber = '0.5.0'
-devBuild = true
+versionNumber = '0.5.0-SNAPSHOT'
 
 explodedDistDir = new File(distsDir, 'exploded')
 explodedDistLibDir = new File(explodedDistDir, 'lib')
 explodedDistBinDir = new File(explodedDistDir, 'bin')
 explodedDistConfigDir = new File(explodedDistDir, 'config')
 
-
-gradle.taskGraph.whenReady {graph ->
-    if (graph.hasTask(':release')) {
-        devBuild = false
-    }
-}
 
 allprojects {
     group = 'org.elasticsearch'
@@ -97,12 +90,7 @@ zip.doFirst {task ->
     }
 }
 
-task devRelease(dependsOn: [zip]) {
-
-}
-
 task release(dependsOn: [zip]) {
-
 }
 
 task wrapper(type: Wrapper) {
