start work on getting maven working..
Former-commit-id: aef5aa0b333d990adba72c5c4e4ec739ece17552

--- a/modules/elasticsearch/build.gradle
+++ b/modules/elasticsearch/build.gradle
@@ -3,6 +3,7 @@ import java.text.SimpleDateFormat
 dependsOn(':test-testng')
 
 usePlugin 'java'
+usePlugin 'maven'
 
 archivesBaseName = "$project.archivesBaseName"
 
@@ -61,4 +62,17 @@ test {
     options.suiteName = project.name
     options.listeners = ["org.elasticsearch.util.testng.Listeners"]
     options.systemProperties = ["es.test.log.conf": System.getProperty("es.test.log.conf", "log4j-gradle.properties")]
+}
+
+configure(install.repositories.mavenInstaller) {
+//    pom.name = "ElasticSearch"
+//    pom.description = "Open Source, Distributed, RESTful, Search Engine"
+//    pom.url = "http://www.elasticsearch.org"
+}
+
+uploadArchives {
+    repositories.mavenDeployer {
+//        repository(url: "file://localhost/" + rootProject.projectDir.absolutePath + "/build/maven/repository")
+//        snapshotRepository(url: "file://localhost/" + rootProject.projectDir.absolutePath + "/build/maven/snapshotRepository")
+    }
 }
