--- a/modules/elasticsearch/build.gradle
+++ b/modules/elasticsearch/build.gradle
@@ -47,6 +47,7 @@ dependencies {
     compile 'org.apache.lucene:lucene-core:3.0.1'
     compile 'org.apache.lucene:lucene-analyzers:3.0.1'
     compile 'org.apache.lucene:lucene-queries:3.0.1'
+    compile 'org.apache.lucene:lucene-fast-vector-highlighter:3.0.1'
 
     compile('jgroups:jgroups:2.9.0.GA') { transitive = false }
     compile('org.jboss.netty:netty:3.1.5.GA') { transitive = false }
