--- a/build.gradle
+++ b/build.gradle
@@ -90,7 +90,8 @@ zip.doFirst {task ->
     }
 }
 
-task release(dependsOn: [zip]) {
+task release(dependsOn: [zip, ":plugins-attachments:release"]) << {
+    ant.delete(dir: explodedDistDir)
 }
 
 task wrapper(type: Wrapper) {
