bring back the exploded plugin
Former-commit-id: 7c402507fe09efc0c90d3b5b6188fe70d916b237

--- a/build.gradle
+++ b/build.gradle
@@ -91,7 +91,7 @@ zip.doFirst {task ->
 }
 
 task release(dependsOn: [zip, ":plugins-attachments:release"]) << {
-    ant.delete(dir: explodedDistDir)
+//    ant.delete(dir: explodedDistDir)
 }
 
 task wrapper(type: Wrapper) {
