add source files to dist jar files
Former-commit-id: 8faf8c21696a4dfe81ac6aad08d9228f464e12ee

--- a/modules/elasticsearch/build.gradle
+++ b/modules/elasticsearch/build.gradle
@@ -1,5 +1,3 @@
-import java.text.SimpleDateFormat
-
 dependsOn(':test-testng')
 
 usePlugin 'java'
@@ -25,6 +23,10 @@ manifest.mainAttributes("Implementation-Title": "ElasticSearch", "Implementation
 // no need to use the resource dir
 sourceSets.main.resources.srcDirs 'src/main/java', rootProject.file('config')
 sourceSets.test.resources.srcDir 'src/test/java'
+
+jar {
+    from sourceSets.main.allJava
+}
 
 dependencies {
     compile('jline:jline:0.9.94') { transitive = false }
