add source files to dist jar files
Former-commit-id: 05d85b2ae405d9ebae8bdedd8d4b38481c3a7e3c

--- a/modules/elasticsearch/build.gradle
+++ b/modules/elasticsearch/build.gradle
@@ -24,6 +24,7 @@ manifest.mainAttributes("Implementation-Title": "ElasticSearch", "Implementation
 sourceSets.main.resources.srcDirs 'src/main/java', rootProject.file('config')
 sourceSets.test.resources.srcDir 'src/test/java'
 
+// add the source files to the dist jar
 jar {
     from sourceSets.main.allJava
 }
