--- a/plugins/attachments/build.gradle
+++ b/plugins/attachments/build.gradle
@@ -15,6 +15,7 @@ configurations.testCompile.transitive = true
 sourceSets.main.resources.srcDir 'src/main/java'
 sourceSets.test.resources.srcDir 'src/test/java'
 
+// add the source files to the dist jar
 jar {
     from sourceSets.main.allJava
 }
