--- a/modules/benchmark/micro/build.gradle
+++ b/modules/benchmark/micro/build.gradle
@@ -1,6 +1,6 @@
 dependsOn(':elasticsearch')
 
-usePlugin 'java'
+apply plugin: 'java'
 
 archivesBaseName = "$rootProject.archivesBaseName-$project.archivesBaseName"
 
@@ -20,7 +20,7 @@ dependencies {
 
 test {
     useTestNG()
-    options.suiteName = project.name
-    options.listeners = ["org.elasticsearch.util.testng.Listeners"]
-    options.systemProperties = ["es.test.log.conf": System.getProperty("es.test.log.conf", "log4j-gradle.properties")]
+    suiteName = project.name
+    listeners = ["org.elasticsearch.util.testng.Listeners"]
+    systemProperties["es.test.log.conf"] = System.getProperty("es.test.log.conf", "log4j-gradle.properties")
 }
