--- a/modules/test/integration/build.gradle
+++ b/modules/test/integration/build.gradle
@@ -1,6 +1,6 @@
 dependsOn(':elasticsearch')
 
-usePlugin 'java'
+apply plugin: 'java'
 
 archivesBaseName = "$rootProject.archivesBaseName-$project.archivesBaseName"
 
@@ -22,10 +22,8 @@ dependencies {
 test {
     useTestNG()
     jmvArgs = ["-ea", "-Xmx1024m"]
-    options.suiteName = project.name
-    options.listeners = ["org.elasticsearch.util.testng.Listeners"]
-    options.systemProperties = [
-            "es.test.log.conf": System.getProperty("es.test.log.conf", "log4j-gradle.properties"),
-            "java.net.preferIPv4Stack": "true"
-    ]
+    suiteName = project.name
+    listeners = ["org.elasticsearch.util.testng.Listeners"]
+    systemProperties["es.test.log.conf"] = System.getProperty("es.test.log.conf", "log4j-gradle.properties")
+    systemProperties["java.net.preferIPv4Stack"] = "true"
 }
