--- a/gradle/gradle-wrapper.properties
+++ b/gradle/gradle-wrapper.properties
@@ -1,8 +1,8 @@
-#Sun Dec 13 20:16:46 IST 2009
+#Fri Apr 02 15:36:16 IDT 2010
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
-distributionVersion=0.8
+distributionVersion=0.9-preview-1
 zipStorePath=wrapper/dists
 urlRoot=http\://dist.codehaus.org/gradle
 distributionName=gradle
