better pom generation
Former-commit-id: 7c904dcd0ee3d3ff2dd9b42cc647eed33ea5b65f

--- a/modules/elasticsearch/build.gradle
+++ b/modules/elasticsearch/build.gradle
@@ -72,6 +72,7 @@ uploadArchives {
     repositories.mavenDeployer {
         repository(url: "file://localhost/" + rootProject.projectDir.absolutePath + "/build/maven/repository")
         snapshotRepository(url: "file://localhost/" + rootProject.projectDir.absolutePath + "/build/maven/snapshotRepository")
+
         pom.project {
             inceptionYear '2009'
             name 'elasticsearch'
@@ -88,6 +89,14 @@ uploadArchives {
                 developerConnection 'git@github.com:elasticsearch/elasticsearch.git'
                 url 'http://github.com/elasticsearch/elasticsearch'
             }
+        }
+
+        pom.whenConfigured {pom ->
+            pom.dependencies = pom.dependencies.findAll {dep -> dep.scope != 'test' } // removes the test scoped ones
+            pom.dependencies = pom.dependencies.findAll {dep -> !dep.artifactId.contains('log4j') } // removes the test scoped ones
+            pom.dependencies = pom.dependencies.findAll {dep -> !dep.artifactId.contains('jline') } // removes the test scoped ones
+            pom.dependencies.findAll {dep -> dep.groupId == 'jgroups' }*.scope = 'runtime'
+            pom.dependencies.findAll {dep -> dep.groupId == 'org.jboss.netty' }*.scope = 'runtime'
         }
     }
 }
