update javadoc task to use more mem
Former-commit-id: 5da4b0748f0e44b1b27e68fde4ba46cbbc485f7b

--- a/modules/elasticsearch/build.gradle
+++ b/modules/elasticsearch/build.gradle
@@ -60,6 +60,10 @@ dependencies {
     testCompile 'org.hamcrest:hamcrest-all:1.1'
 }
 
+javadoc {
+    maxMemory = "1g"
+}
+
 test {
     useTestNG()
     jmvArgs = ["-ea", "-Xmx1024m"]
