fix wrong handling of doc ids to load when request is not serialized
Former-commit-id: 9549b9c2d3cd4151a03bacebea13b96b19478291

--- a/build.gradle
+++ b/build.gradle
@@ -66,6 +66,9 @@ task explodedDist(dependsOn: [configurations.distLib], description: 'Builds a mi
         include 'README.textile'
     }
 
+    ant.delete { fileset(dir: explodedDistLibDir, includes: "$archivesBaseName-*-javadoc.jar") }
+    ant.delete { fileset(dir: explodedDistLibDir, includes: "$archivesBaseName-*-sources.jar") }
+
     ant.chmod(dir: "$explodedDistDir/bin", perm: "ugo+rx", includes: "**/*")
 }
 
