--- a/settings.gradle
+++ b/settings.gradle
@@ -7,6 +7,7 @@ include 'test-integration'
 include 'benchmark-micro'
 
 include 'plugins-attachments'
+include 'plugins-groovy'
 
 rootProject.name = 'elasticsearch-root'
 rootProject.children.each {project ->
