more groovy client work
Former-commit-id: ac5285ea249dd471a0366ca765742409b1410706

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@ modules/elasticsearch/build/
 modules/test/integration/build/
 modules/test/testng/build/
 modules/benchmark/micro/build/
+plugins/attachments/build
+plugins/groovy/build
