memcached initial work
Former-commit-id: 51aac0cdf7d1a2c76beb0235ec4535030aadaa23

--- a/settings.gradle
+++ b/settings.gradle
@@ -8,6 +8,7 @@ include 'benchmark-micro'
 
 include 'plugins-attachments'
 include 'plugins-groovy'
+include 'plugins-memcached'
 
 rootProject.name = 'elasticsearch-root'
 rootProject.children.each {project ->
