finalize the connection listener support
Former-commit-id: fcc32cbe2100f9653bb7aada936d8ed87e393903

--- a/modules/test/testng/src/main/java/log4j.properties
+++ b/modules/test/testng/src/main/java/log4j.properties
@@ -1,6 +1,7 @@
 log4j.rootLogger=INFO, out
 log4j.logger.jgroups=WARN
 
+#log4j.logger.transport=TRACE
 #log4j.logger.discovery=TRACE
 #log4j.logger.cluster.service=TRACE
 #log4j.logger.cluster.action.shard=DEBUG
