--- a/modules/test/testng/build.gradle
+++ b/modules/test/testng/build.gradle
@@ -11,8 +11,8 @@ sourceSets.test.resources.srcDir 'src/test/java'
 
 dependencies {
     compile('org.testng:testng:5.10:jdk15') { transitive = false }
-    compile 'org.slf4j:slf4j-api:1.5.8'
-    compile('org.slf4j:slf4j-log4j12:1.5.8') { transitive = false }
+    compile('org.slf4j:slf4j-api:1.5.11') { transitive = false }
+    compile('org.slf4j:slf4j-log4j12:1.5.11') { transitive = false }
     compile('log4j:log4j:1.2.15') { transitive = false }
 }
 
