update test resources build file
Former-commit-id: 609af0da60012080fbf796efd5912a58545d8e49

--- a/modules/elasticsearch/build.gradle
+++ b/modules/elasticsearch/build.gradle
@@ -22,7 +22,7 @@ manifest.mainAttributes("Implementation-Title": "ElasticSearch", "Implementation
 
 // no need to use the resource dir
 sourceSets.main.resources.srcDirs 'src/main/java', rootProject.file('config')
-sourceSets.test.resources.srcDir 'src/test/java'
+sourceSets.test.resources.srcDirs 'src/test/java'
 
 // add the source files to the dist jar
 jar {
