--- a/modules/benchmark/micro/build.gradle
+++ b/modules/benchmark/micro/build.gradle
@@ -8,8 +8,8 @@ configurations.compile.transitive = true
 configurations.testCompile.transitive = true
 
 // no need to use the resource dir
-sourceSets.main.resources.srcDir 'src/main/java'
-sourceSets.test.resources.srcDir 'src/test/java'
+sourceSets.main.resources.srcDirs 'src/main/java'
+sourceSets.test.resources.srcDirs 'src/test/java'
 
 dependencies {
     compile project(':elasticsearch')
