--- a/modules/test/testng/build.gradle
+++ b/modules/test/testng/build.gradle
@@ -6,8 +6,8 @@ configurations.compile.transitive = true
 configurations.testCompile.transitive = true
 
 // no need to use the resource dir
-sourceSets.main.resources.srcDir 'src/main/java'
-sourceSets.test.resources.srcDir 'src/test/java'
+sourceSets.main.resources.srcDirs 'src/main/java'
+sourceSets.test.resources.srcDirs 'src/test/java'
 
 dependencies {
     compile('org.testng:testng:5.10:jdk15') { transitive = false }
