move zen discovery to be the default discovery, and move jgroups to a plugin
Former-commit-id: 6975f5d15af9bc42fa5d3dde4bedc37e5fae2637

--- a/settings.gradle
+++ b/settings.gradle
@@ -9,6 +9,7 @@ include 'benchmark-micro'
 include 'plugins-attachments'
 include 'plugins-groovy'
 include 'plugins-memcached'
+include 'plugins-discovery-jgroups'
 
 rootProject.name = 'elasticsearch-root'
 rootProject.children.each {project ->
