refactor plugins into sub groups
Former-commit-id: 10f0eaad68557ff2aae92dd65e8f1b9037ea0942

--- a/build.gradle
+++ b/build.gradle
@@ -92,7 +92,7 @@ task zip(type: Zip, dependsOn: ['explodedDist']) {
     }
 }
 
-task release(dependsOn: [zip, ":plugins-attachments:release"]) << {
+task release(dependsOn: [zip]) << {
     ant.delete(dir: explodedDistDir)
 }
 
