update project files, remove sources from jar files
Former-commit-id: c7e4ec6369bbc779ddf1c85c0285ea7711d758c9

--- a/modules/elasticsearch/build.gradle
+++ b/modules/elasticsearch/build.gradle
@@ -25,9 +25,9 @@ sourceSets.main.resources.srcDirs 'src/main/java', rootProject.file('config')
 sourceSets.test.resources.srcDirs 'src/test/java'
 
 // add the source files to the dist jar
-jar {
-    from sourceSets.main.allJava
-}
+//jar {
+//    from sourceSets.main.allJava
+//}
 
 dependencies {
     compile('jline:jline:0.9.94') { transitive = false }
