--- a/plugins/client/groovy/build.gradle
+++ b/plugins/client/groovy/build.gradle
@@ -17,9 +17,9 @@ sourceSets.main.resources.srcDirs 'src/main/groovy'
 sourceSets.test.resources.srcDirs 'src/test/groovy'
 
 // add the source files to the dist jar
-jar {
-    from sourceSets.main.allSource
-}
+//jar {
+//    from sourceSets.main.allSource
+//}
 
 configurations {
     dists
