--- a/plugins/client/groovy/build.gradle
+++ b/plugins/client/groovy/build.gradle
@@ -37,6 +37,7 @@ dependencies {
     testCompile project(':test-testng')
     testCompile('org.testng:testng:5.10:jdk15') { transitive = false }
     testCompile 'org.hamcrest:hamcrest-all:1.1'
+    testCompile('junit:junit:4.8.1') {transitive = false}
 }
 
 test {
