add custom elasticsearch repo on google code
Former-commit-id: dfd002bf98e1c4d60e481fcfac4706cc8ca9c2aa

--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,7 @@ allprojects {
     repositories {
         mavenCentral()
         mavenRepo urls: 'http://repository.jboss.com/maven2/'
+        mavenRepo urls: 'http://elasticsearch.googlecode.com/svn/maven'
     }
 }
 
