Script / Service: Add ES_MIN_MEM and ES_MAX_MEM, closes #156
Former-commit-id: c09877c2bde915cbf135927b13325203159d9338

--- a/bin/service/elasticsearch.conf
+++ b/bin/service/elasticsearch.conf
@@ -1,4 +1,6 @@
 set.default.ES_HOME=<Path to ElasticSearch Home>
+set.default.ES_MIN_MEM=256
+set.default.ES_MAX_MEM=1024
 
 #********************************************************************
 # Wrapper Timeout Properties
@@ -46,10 +48,10 @@ wrapper.java.additional.8=-XX:+CMSParallelRemarkEnabled
 wrapper.java.additional.9=-XX:+HeapDumpOnOutOfMemoryError
 
 # Initial Java Heap Size (in MB)
-wrapper.java.initmemory=128
+wrapper.java.initmemory=%ES_MIN_MEM%
 
 # Maximum Java Heap Size (in MB)
-wrapper.java.maxmemory=1024
+wrapper.java.maxmemory=%ES_MAX_MEM%
 
 # Application parameters.  Add parameters as needed starting from 1
 wrapper.app.parameter.1=org.elasticsearch.bootstrap.Bootstrap
